--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -8,4 +8,4 @@ html(lang='en')
     i.material-icons home
     h1 Pug Examples
     div.container
-      p Cool Pug example! Yay !
+      p Cool Pug example ! Yay ! Start to play !
